--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,11 @@ h1.head-h1{
 table.my-table{
 	margin-top:50px;
 }
+input[type="checkbox"]{
+	// vertical-align: middle;
+}
+span{
+	position: relative;
+	top:-1px;
+	left:3px;
+}
