--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,24 @@ h1.head-h1{
 	margin-top:30px;
 }
 div.container{
-	min-width:750px;
+	min-width:996px;
 }
 table.my-table{
 	margin-top:50px;
 }
-input[type="checkbox"]{
+.set-color{
+	background-color: #FFFFCC;
+}
+input[type='checkbox']:hover{
+	cursor:pointer;
 	// vertical-align: middle;
 }
 span{
 	position: relative;
 	top:-1px;
 	left:3px;
+}
+#list-book>tr>td:hover{
+	cursor: auto;
+	background-color: #cccccc;
 }
